# PrismGL

./: .gitignore  build.gradle  gradle.properties  gradlew  settings.gradle
.github/workflows/: android.yml  build.yml
app/: .project  build.gradle  proguard-rules.pro
app/src/main/: AndroidManifest.xml
app/src/main/cpp/: CMakeLists.txt
app/src/main/cpp/gl/: GLESToGLConverter.cpp  GLESToGLConverter.h  GLWrapper.cpp  GLWrapper.h  VulkanBridge.cpp  VulkanBridge.h
app/src/main/cpp/jni/: PrismGLJNI.cpp
app/src/main/cpp/renderer/: AdaptiveRenderer.cpp  AdaptiveRenderer.h  DrawCallOptimizer.cpp  DrawCallOptimizer.h  PrismGLRenderer.cpp  PrismGLRenderer.h  ShaderManager.cpp  ShaderManager.h  TextureManager.cpp  TextureManager.h
app/src/main/cpp/util/: FileCache.cpp  FileCache.h  Logger.cpp  Logger.h
app/src/main/java/com/prismgl/renderer/: MainActivity.java  PrismGLNative.java  RendererConfig.java  RendererProvider.java  SettingsActivity.java
app/src/main/java/com/prismgl/renderer/service/: RendererService.java
app/src/main/java/com/prismgl/renderer/util/: ConfigManager.java
app/src/main/res/drawable/: ic_launcher_foreground.xml
app/src/main/res/layout/: activity_main.xml  activity_settings.xml
app/src/main/res/values/: colors.xml  strings.xml  styles.xml  themes.xml
native/: CMakeLists.txt
native/include/: gpu_detect.h  prismgl.h  shader_translator.h
native/src/: gl_wrapper.c  gpu_detect.c  jni_bridge.c  prismgl_core.c  proc_address.c  shader_cache.c  shader_translator.c
